refactor: changed to getFirst